# sagacity

./: LICENSE  README.md  sample.html  setup.cfg  tox.ini  ux.html
sagacity/: __init__.py  __main__.py  execute.py  git.py  render.py
