[metadata]
name = sagacity
home-page = https://github.com/4383/sagacity/
summary = Visualize deep patterns in your project history
description-file = 
    README.md
author = Hervé Beraud
author-email = herveberaud.pro@gmail.com
license = MIT
python-requires = >=3.6
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages =
    sagacity

[entry_points]
console_scripts =
    sagacity = sagacity.__main__:main

[wheel]
universal = 1
